# AIAmplitudes_common_public

./: .gitignore  README.md  README_packaging.md  UnQuad.ipynb  Untitled.ipynb  __init__.py  commonclasses.py  fbspaces.py  operators.py  pyproject.toml  pyproject_update.toml  rels_utils.py  setup.py  shuffle_operators.py
nbs_to_integrate/: Dihedralator.ipynb  Make_Rundata.ipynb  Make_Rundata_Normalized.ipynb  Polynomials.ipynb  Rayfinder.ipynb  Seam_Sewing_Rels.ipynb  Shuffle_Product.ipynb  Strikeout.ipynb  Untitled.ipynb  reltools.ipynb
nbs_to_integrate/.ipynb_checkpoints/: Dihedralator-checkpoint.ipynb
notebook/: Amplitudes_101.ipynb  Amplitudes_102.ipynb
scripts/: derive_oct_matrix.py
src/AIAA_common/: commonclasses.py  operators.py  preprocessing.py  rels_utils.py
src/AIAmplitudes/: __init__.py  commonclasses.py  download_data.py  fbspaces.py  file_readers.py  operators.py  polynomial_utils.py  preprocessing.py  rels_utils.py  runpolynomials.py  shuffle_operators.py  symboldicts.py  symbols.py
src/AIAmplitudes_common_public/: .__init__.py.swp  __init__.py  fbspaces.py  file_readers.py  polynomial_utils.py  preprocessing.py  rels_utils.py
src/aiamplitudes_common_public/: Untitled.ipynb  __init__.py  commonclasses.py  download_data.py  fbspaces.py  file_readers.py  lazy_symbol.py  polynomial_utils.py  preprocessing.py  rels_utils.py  uncompressor.py
tests/: test_uncompressor.py
