[project]
name = "AIAmplitudes"
version = "0.0.2"
authors = [
  { name="Garrett Merz", email="garrett.merz@wisc.edu" },
  { name="Francois Charton", email="fcharton@meta.com" },
  { name="Tianji Cai", email="tianjiresearch@gmail.com" },
  { name="Kyle Cranmer", email="kscranmer@wisc.edu" },
  { name="Matthias Wilhelm", email="mailmwilhelm@imada.sdu.dk" },
  { name="Lance Dixon", email="lance@slac.stanford.edu" },
]
description = "A library of common utils for the AI Amplitudes project"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies=[
'wandb==0.15.8',
'pillow==9.4.0',
'tensorboard==2.12.3',
'pandas==2.0.3',
'numpy==1.24.1',
'wraps==0.4.0',
'partial==1.0',
'matplotlib==3.7.1',
'sympy==1.11.1',
'ipython==8.13.0',
'torch==2.3.1',
'torchvision==0.18.1',
'torchaudio==2.3.1',
'torchmetrics==1.4.1',
'scipy==1.10.1',
'einops==0.7.0',
]


[project.urls]
Homepage = "https://github.com/AIAmplitudes"
